--- a/src/index.html
+++ b/src/index.html
@@ -131,9 +131,9 @@
     </section>
 
     <footer class="bg-navbarColor">
-        <div class="container flex mx-auto justify-around items-center mt-12">
+        <div class="container flex mx-auto justify-around items-center mt-12 ">
             <!-- Loan Products -->
-            <div class="space-y-6">
+            <div class="space-y-6 ml-16">
                 <h1 class="font-bold text-4xl max-w-md md:text-5xl">Loan Products</h1>
                 <ul class="space-y-4 text-lg text-navbarLinks">
                     <li>Jipange Loan</li>
