--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <div class=" px-auto ">
         <!-- Navbar -->
 
-        <nav class="container flex justify-between items-center mx-auto bg-navbarColor py-8 rounded-2xl drop-shadow-xl text-navbarLinks mb-32 mt-12
+        <nav class="container flex justify-between items-center mx-auto bg-navbarColor py-8 rounded-2xl drop-shadow-xl text-navbarLinks mb-32 mt-12 relative
                 ">
             <!-- Trademark -->
             <div>
@@ -32,13 +32,31 @@
                 <a href="#" class=" hover:text-black">Register</a>
                 <a href="#" class="pr-8 hover:text-black">Login</a>
             </div>
+            <!-- Hamburger Menu -->
+            <button id="menu-btn" class=" block hamburger md:hidden focus:outline-none ">
+                <span class="hamburger-top"></span>
+                <span class="hamburger-middle"></span>
+                <span class="hamburger-bottom"></span>
+            </button>
+
+            <!-- Mobile Menu -->
+            <div class="md:hidden">
+                <div id="menu"
+                    class=" absolute flex-col items-center self-end  hidden py-8 mt-10 space-y-6  bg-navbarColor sm:w-auto sm:self-center left-6 right-6 drop-shadow-xl">
+                    <a href="#">Home</a>
+                    <a href="#">Products</a>
+                    <a href="#">About Us</a>
+                    <a href="#">Register</a>
+                    <a href="#">Login</a>
+                </div>
+            </div>
         </nav>
 
 
 
         <!-- Section -->
         <section>
-            <div class="container flex mx-auto   mb-32">
+            <div class="container flex mx-auto mb-32">
                 <!-- Text -->
                 <div class="flex flex-col space-y-14 mx-auto  md:w-1/3 ">
                     <!-- header -->
@@ -104,7 +122,7 @@
             <div class="flex flex-col space-y-6 mx-auto mt-12">
                 <h1 class="font-bold text-4xl max-w-md  md:text-5xl text-left ">Company Values</h1>
                 <h3 class=" font-bold text-3xl ml-9">Core Values</h3>
-                <div class=" text-lg text-navbarLinks md:columns-2 md:gap-x-6 ">
+                <div class="  text-navbarLinks columns-2 md:columns-2 md:gap-x-14 md:text-lg ">
                     <div class="space-y-6">
                         <li>Democratic Governance</li>
                         <li>Inclusiveness</li>
@@ -131,7 +149,7 @@
     </section>
 
     <footer class="bg-navbarColor">
-        <div class="container flex mx-auto justify-around items-center mt-12 ">
+        <div class="container flex flex-col  justify-around items-center mt-12 space-y-12 md:flex-row md:mx-auto">
             <!-- Loan Products -->
             <div class="space-y-6 ml-16">
                 <h1 class="font-bold text-4xl max-w-md md:text-5xl">Loan Products</h1>
@@ -155,7 +173,7 @@
             </div>
         </div>
     </footer>
-    
+    <script src="../js/script.js"></script>
 </body>
 
 </html>
